--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,11 @@ body {
     padding: .2rem;
     border-radius: 20px;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
+
+    .logo{
+        width: 100%;
+        padding-left: .4rem;
+    }
 }
 
 .players-container {
@@ -233,17 +238,12 @@ body {
 }
 
 #play-audio i {
-    margin-right: 8px; /* Espacio entre el icono y el texto */
+    margin-right: 8px;
+    /* Espacio entre el icono y el texto */
 }
 
 #play-audio:hover {
     background-color: #e0e0e0;
-}
-
-.score-item {
-    display: flex;
-    align-items: center;
-    margin: 0 10px;
 }
 
 #word-card {
@@ -298,7 +298,7 @@ body {
 }
 
 .msg {
-    font-size: 2rem; 
+    font-size: 2rem;
     padding-left: .4rem;
 }
 
@@ -313,7 +313,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 1.5rem;
-    font-size: 1.2rem;
+    font-size: 3rem;
 }
 
 .score-item {
@@ -376,6 +376,13 @@ body {
 }
 
 /* Resultados */
+.results-container .logo {
+    width: 100%;
+    padding-left: .4rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 20px;
+}
+
 #podium {
     display: flex;
     justify-content: center;
@@ -386,7 +393,7 @@ body {
 
 .podium-item {
     width: 100px;
-    height: 150px;
+    height: 160px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -401,12 +408,12 @@ body {
 
 .silver {
     background: #c0c0c0;
-    height: 110px;
+    height: 120px;
 }
 
 .bronze {
     background: #cd7f32;
-    height: 70px;
+    height: 100px;
 }
 
 /* Animaciones */
@@ -604,4 +611,52 @@ body {
     to {
         opacity: 1;
     }
+}
+
+/* Estilos para la tabla */
+#results-table {
+    border-collapse: collapse;    
+    text-align: center;
+    width: 80%;
+    max-width: 800px;
+    margin: 20px auto;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+/* Estilos para las celdas del encabezado */
+#results-table thead th {
+    background-color: #3498db;
+    color: #fff;
+    text-align: left;
+    padding: 15px;
+    font-size: 1.2rem;
+}
+
+/* Estilos para las celdas del cuerpo */
+#results-table tbody td {
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+    font-size: 1rem;
+}
+
+/* Estilos para alternar colores de las filas */
+#results-table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+/* Estilos para la última fila */
+#results-table tbody tr:last-child td {
+    border-bottom: none;
+}
+
+/* Estilos para resaltar fila al pasar el cursor */
+#results-table tbody tr:hover {
+    background-color: #f1f1f1;
+}
+
+#podium-1 {
+    font-weight: bolder;
 }
